finisded the histogram

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="nav__logo">
             <img class="nav__logo--logoImag" src="images/logo.png" alt="logo">
             <div class="nav__logo--logoWords">卷宗管理系统  &nbsp;|</div>
-            <div class="nav__logo--address">白银市烟草专卖局</div>
+            <div class="nav__logo--address">--市烟草专卖局</div>
         </div>
         <div class="nav__login">
             <img id="notification" src="images/bell.png" alt="notification" class="nav__login--notification">
